module(
    name = "google_toolbox_for_mac",
    version = "5.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "rules_apple", version = "4.3.3", repo_name = "build_bazel_rules_apple")

# Workaround https://github.com/bazelbuild/bazel/issues/20537
bazel_dep(name = "apple_support", version = "2.2.0", repo_name = "build_bazel_apple_support")
